# kmeans-Extension-Ptolemy

./: .gitignore  .latexmkrc  CC-BY-LICENSE  Makefile  README.md  license  main.py  main.tex  means.py  notebook.ipynb  paper.tex  plot_results.py  plot_results_interactively.ipynb  pyproject.toml  references.bib  requirements.txt  todo.md
.github/workflows/: main.yml
content/: 3_preliminaries.tex  3u4_methods.tex  4_contribution.tex  5_results.tex  alg_elkan2.tex  preamble.tex
paper/: Makefile  paper.tex  todo.md
paper/content/: 2_introduction.tex  3_preliminaries.tex  4_contribution.tex  5_results.tex  6_conclusion.tex  alg_elkan.tex  alg_elkan2.tex  alg_pto.tex  preamble.tex
paper/references/: bibliography_iiwas.bib  bibliography_thesis.bib  references.bib
paper/review/: rebuttal.md  rebuttal_drafting.md
results/: clustering_performance_results_formatted.xlsx
review/: rebuttal.md  rebuttal_drafting.md
